# api/handler/auth_handler.go
@@ -5,7 +5,6 @@ import (
 	"api/service"
 	"api/utils/constants"
 	"api/utils/errs"
-	"fmt"
 	"github.com/gin-contrib/sessions"
 	"github.com/gin-gonic/gin"
 	"log"
@@ -13,17 +12,21 @@ import (
 )
 
 type AuthHandler struct {
-	authService       service.IAuthService
-	googleAuthService service.IGoogleAuthService
-	tokenService      service.ITokenService
+	authService         service.IAuthService
+	externalAuthService service.IExternalAuthService
+	tokenService        service.ITokenService
 }
 
 func NewAuthHandler(
 	authService service.IAuthService,
-	googleAuthService service.IGoogleAuthService,
+	externalAuthService service.IExternalAuthService,
 	tokenService service.ITokenService,
 ) *AuthHandler {
-	return &AuthHandler{authService: authService, googleAuthService: googleAuthService, tokenService: tokenService}
+	return &AuthHandler{
+		authService:         authService,
+		externalAuthService: externalAuthService,
+		tokenService:        tokenService,
+	}
 }
 
 func (h *AuthHandler) SendCode(c *gin.Context) {
@@ -69,24 +72,60 @@ func (h *AuthHandler) VerifyCode(c *gin.Context) {
 	})
 }
 
+// SignUp godoc
+// @Summary      Регистрация пользователя по email
+// @Description  Создаёт нового пользователя по переданному email и паролю. Должен быть подтверждён Email и получен токен на этапе verify_code. После успешной регистрации создаётся сессия.
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Param        request body dto.EmailSignUpRequest true "Данные для регистрации"
+// @Success      201 {object} dto.LoginResponse "Пользователь успешно зарегистрирован, сессия создана"
+// @Failure      400 {object} errs.AppError "Неверный формат запроса"
+// @Failure      409 {object} errs.AppError "Пользователь с таким email уже существует"
+// @Failure      500 {object} errs.AppError "Внутренняя ошибка сервера"
+// @Security     ApiToken
+// @Router       /auth/sign-up [post]
 func (h *AuthHandler) SignUp(c *gin.Context) {
-	var request dto.SignUpRequest
+	var request dto.EmailSignUpRequest
 	if err := c.ShouldBind(&request); err != nil {
 		errs.HandleError(c, errs.InvalidRequest)
 		return
 	}
 	request.Email = c.MustGet(constants.ContextEmail).(string)
-	fmt.Println("Email: ", request.Email)
 
-	err := h.authService.SignUp(&request)
+	user, err := h.authService.SignUp(&request)
 	if err != nil {
 		errs.HandleError(c, err)
 		return
 	}
 
-	c.JSON(http.StatusCreated, dto.MessageResponse{Message: constants.SignedUp})
+	session := sessions.Default(c)
+	session.Set(constants.ContextUserID, user.UserID)
+	if err = session.Save(); err != nil {
+		errs.HandleError(c, err)
+		return
+	}
+
+	c.JSON(http.StatusCreated, dto.LoginResponse{
+		Message:   constants.SignedUp,
+		FirstName: *user.FirstName,
+		LastName:  *user.LastName,
+	})
 }
 
+// Login godoc
+// @Summary      Вход пользователя
+// @Description  Авторизует пользователя по email и паролю. В случае успеха создаётся сессия, возвращаются имя и фамилия пользователя.
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Param        request body dto.LoginRequest true "Данные для входа"
+// @Success      200 {object} dto.LoginResponse "Успешный вход, сессия создана"
+// @Failure      400 {object} errs.AppError "Неверный формат запроса"
+// @Failure      404 {object} errs.AppError "Пользователя с таким email не существует"
+// @Failure      500 {object} errs.AppError "Внутренняя ошибка сервера"
+// @Security     SessionCookie
+// @Router       /auth/login [post]
 func (h *AuthHandler) Login(c *gin.Context) {
 	var request dto.LoginRequest
 	if err := c.ShouldBind(&request); err != nil {
@@ -102,7 +141,6 @@ func (h *AuthHandler) Login(c *gin.Context) {
 
 	session := sessions.Default(c)
 	session.Set(constants.ContextUserID, user.UserID)
-
 	if err = session.Save(); err != nil {
 		errs.HandleError(c, err)
 		return
@@ -110,8 +148,8 @@ func (h *AuthHandler) Login(c *gin.Context) {
 
 	c.JSON(http.StatusOK, dto.LoginResponse{
 		Message:   constants.LoggedIn,
-		FirstName: user.FirstName,
-		LastName:  user.LastName,
+		FirstName: *user.FirstName,
+		LastName:  *user.LastName,
 	})
 }
 
@@ -136,98 +174,32 @@ func (h *AuthHandler) CheckSession(c *gin.Context) {
 }
 
 // GoogleLogin выполняет вход через Google OAuth2.
-//
 // @Summary Вход через Google
-// @Description Если пользователь уже завершил регистрацию, создаётся сессия. Иначе возвращается временный токен для завершения регистрации.
+// @Description При успешном входе устанавливается сессия.
 // @Tags auth
 // @Accept json
 // @Produce json
-// @Param request body dto.GoogleAuthRequest true "Токен Google ID"
+// @Param request body dto.ExternalAuthRequest true "Токен Google ID"
 // @Success 200 {object} dto.LoginResponse "Регистрация завершена — пользователь вошёл"
-// @Success 200 {object} dto.RegistrationIncompleteResponse "Регистрация не завершена — вернётся временный токен"
 // @Failure 400 {object} errs.AppError "Некорректный запрос"
 // @Failure 401 {object} errs.AppError "Невалидный Google токен"
 // @Failure 500 {object} errs.AppError "Внутренняя ошибка сервера"
 // @Router /auth/google [post]
 func (h *AuthHandler) GoogleLogin(c *gin.Context) {
-	var req dto.GoogleAuthRequest
+	var req dto.ExternalAuthRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		errs.HandleError(c, errs.InvalidRequest)
 		return
 	}
 
-	user, err := h.googleAuthService.GoogleAuth(req.Token)
-	if err != nil {
-		errs.HandleError(c, err)
-		return
-	}
-
-	if user.ProfileComplete {
-		session := sessions.Default(c)
-		session.Set(constants.ContextUserID, user.UserID)
-		if err = session.Save(); err != nil {
-			errs.HandleError(c, err)
-			return
-		}
-		c.JSON(http.StatusOK, dto.LoginResponse{
-			Message:   constants.LoggedIn,
-			FirstName: user.FirstName,
-			LastName:  user.LastName,
-		})
-		return
-	}
-
-	tempToken, err := h.tokenService.GenerateIDToken(user.UserID)
-	if err != nil {
-		errs.HandleError(c, err)
-		return
-	}
-
-	c.JSON(http.StatusOK, dto.RegistrationIncompleteResponse{
-		Message: constants.UncompletedRegistration,
-		Token:   tempToken,
-	})
-}
-
-// CompleteSignUp завершает регистрацию пользователя, начавшего вход через Google.
-//
-// @Summary Завершение регистрации
-// @Description Заполняет недостающие поля профиля после входа через Google.
-// @Tags auth
-// @Accept multipart/form-data
-// @Produce json
-// @Param Authorization header string true "ID токен в формате Bearer <token>"
-// @Param first_name formData string true "Имя"
-// @Param last_name formData string true "Фамилия"
-// @Param second_name formData string false "Отчество"
-// @Param birthday formData string true "Дата рождения (в формате 02.01.2006)"
-// @Param password formData string true "Пароль"
-// @Param region_id formData int true "ID региона"
-// @Success 200 {object} dto.LoginResponse
-// @Failure 400 {object} errs.AppError "Некорректный формат даты или другие ошибки валидации"
-// @Failure 401 {object} errs.AppError "Отсутствует или невалидный/истёкший токен авторизации"
-// @Failure 403 {object} errs.AppError "Регистрация уже завершена"
-// @Failure 404 {object} errs.AppError "Регион не найден"
-// @Failure 500 {object} errs.AppError "Внутренняя ошибка сервера"
-// @Security ApiToken
-// @Router /auth/complete-sign-up [post]
-func (h *AuthHandler) CompleteSignUp(c *gin.Context) {
-	var req dto.SignUpRequest
-	if err := c.ShouldBind(&req); err != nil {
-		errs.HandleError(c, errs.InvalidRequest)
-		return
-	}
-
-	userID := c.MustGet(constants.ContextUserID).(uint)
-
-	user, err := h.googleAuthService.CompleteProfile(userID, &req)
+	user, err := h.externalAuthService.GoogleAuth(req.Token)
 	if err != nil {
 		errs.HandleError(c, err)
 		return
 	}
 
 	session := sessions.Default(c)
-	session.Set(constants.ContextUserID, userID)
+	session.Set(constants.ContextUserID, user.UserID)
 	if err = session.Save(); err != nil {
 		errs.HandleError(c, err)
 		return
@@ -235,7 +207,48 @@ func (h *AuthHandler) CompleteSignUp(c *gin.Context) {
 
 	c.JSON(http.StatusOK, dto.LoginResponse{
 		Message:   constants.LoggedIn,
-		FirstName: user.FirstName,
-		LastName:  user.LastName,
+		FirstName: *user.FirstName,
+		LastName:  *user.LastName,
 	})
+	return
+}
+
+// AppleLogin выполняет вход через Apple.
+// @Summary Вход через Apple
+// @Description При успешном входе устанавливается сессия.
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param request body dto.ExternalAuthRequest true "Токен Apple ID"
+// @Success 200 {object} dto.LoginResponse "Регистрация завершена — пользователь вошёл"
+// @Failure 400 {object} errs.AppError "Некорректный запрос"
+// @Failure 401 {object} errs.AppError "Невалидный Apple токен"
+// @Failure 500 {object} errs.AppError "Внутренняя ошибка сервера"
+// @Router /auth/google [post]
+func (h *AuthHandler) AppleLogin(c *gin.Context) {
+	var req dto.ExternalAuthRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		errs.HandleError(c, errs.InvalidRequest)
+		return
+	}
+
+	user, err := h.externalAuthService.AppleAuth(req.Token)
+	if err != nil {
+		errs.HandleError(c, err)
+		return
+	}
+
+	session := sessions.Default(c)
+	session.Set(constants.ContextUserID, user.UserID)
+	if err = session.Save(); err != nil {
+		errs.HandleError(c, err)
+		return
+	}
+
+	c.JSON(http.StatusOK, dto.LoginResponse{
+		Message:   constants.LoggedIn,
+		FirstName: *user.FirstName,
+		LastName:  *user.LastName,
+	})
+	return
 }
